sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	for ( i <- 0 to lgr-2) {
		if ( i >= i+1 ) {
			echange(i:Int, i+1:Int)
		} 
		else { 
		}
	}
		
		 
}

